force-app/main/default/objects/Policy__c/fields/Form_Type__c.field-meta.xml
<CustomField>
    <fullName>Form_Type__c</fullName>
    <label>Form Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Claims Made</fullName>
            </value>
            <value>
                <fullName>Occurrence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>