force-app/main/default/objects/Policy__c/fields/FS_BOR__c.field-meta.xml
<CustomField>
    <fullName>FS_BOR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FS=BOR</label>
    <type>Checkbox</type>
</CustomField>