force-app/main/default/objects/Policy__c/fields/GL_Limits_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>GL_Limits_Reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GL Limits Reviewed</label>
    <type>Checkbox</type>
</CustomField>