force-app/main/default/objects/Policy__c/fields/Group_ID__c.field-meta.xml
<CustomField>
    <fullName>Group_ID__c</fullName>
    <description>H&amp;B</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Group ID</label>
    <type>TextArea</type>
</CustomField>