force-app/main/default/objects/Policy__c/fields/Group_ID_Vision__c.field-meta.xml
<CustomField>
    <fullName>Group_ID_Vision__c</fullName>
    <description>H&amp;B</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Group ID Vision</label>
    <type>TextArea</type>
</CustomField>