force-app/main/default/objects/Policy__c/fields/Has_Endorsement__c.field-meta.xml
<CustomField>
    <fullName>Has_Endorsement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Endorsement</label>
    <type>Checkbox</type>
</CustomField>