force-app/main/default/objects/Policy__c/fields/IndustryAcc__c.field-meta.xml
<CustomField>
    <fullName>IndustryAcc__c</fullName>
    <formula>Text(Account__r.Industry)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If this field is blank update the industry field on the account.</inlineHelpText>
    <label>Industry</label>
    <type>Text</type>
</CustomField>