force-app/main/default/objects/Policy__c/fields/Internal_Marketer__c.field-meta.xml
<CustomField>
    <fullName>Internal_Marketer__c</fullName>
    <formula>Opportunity__r.Internal_Marketer__r.FirstName + &quot; &quot; + Opportunity__r.Internal_Marketer__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal Marketer</label>
    <type>Text</type>
</CustomField>