force-app/main/default/objects/Policy__c/fields/Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Amount__c</fullName>
    <formula>IF( 
AND( RecordType.DeveloperName = &quot;Scale&quot;, 
 Scale_Surplus_Lines_Filing__c = FALSE),
 (Premium__c +  Policy_Fee__c +  Wholesale_Fee__c -  Commission_New__c - Risk_Management_Fee__c),
IF( 
AND( RecordType.DeveloperName = &quot;Scale&quot;, 
 Scale_Surplus_Lines_Filing__c = TRUE),
(Premium__c + Wholesale_Fee__c + Policy_Fee__c  + State_Tax__c + State_Stamping_Fee__c +State_Fees_Other__c - Risk_Management_Fee__c - Commission_New__c ),
(Premium__c + Wholesale_Fee__c + Policy_Fee__c  + State_Tax__c + State_Stamping_Fee__c +State_Fees_Other__c + FS_Fees__c +  Program_Fee__c  - Risk_Management_Fee__c - Commission_New__c)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>