force-app/main/default/objects/Policy__c/fields/Invoice_Clicked_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Clicked_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Invoice Clicked Date</label>
    <type>DateTime</type>
</CustomField>