force-app/main/default/objects/Policy__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Invoice Number</label>
    <type>TextArea</type>
</CustomField>