force-app/main/default/objects/Policy__c/fields/InvoiceUrl__c.field-meta.xml
<CustomField>
    <fullName>InvoiceUrl__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Invoice URL</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>