force-app/main/default/objects/Policy__c/fields/Is_financed__c.field-meta.xml
<CustomField>
    <fullName>Is_financed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is financed</label>
    <type>Checkbox</type>
</CustomField>