force-app/main/default/objects/Policy__c/fields/Is_Two_Months_From_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Is_Two_Months_From_Renewal__c</fullName>
    <formula>IF( 
Renewal_Date__c &lt;= (TODAY() + 60), 
IF( 
Renewal_Date__c &gt;= TODAY(), 
True, 
False 
), 
False 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Two Months From Renewal</label>
    <type>Checkbox</type>
</CustomField>