force-app/main/default/objects/Policy__c/fields/isVRBypassed__c.field-meta.xml
<CustomField>
    <fullName>isVRBypassed__c</fullName>
    <formula>BLANKVALUE(ValidationByPassDateTime__c, $System.OriginDateTime) &gt; NOW() - 0.00005787037</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isVRBypassed</label>
    <type>Checkbox</type>
</CustomField>