force-app/main/default/objects/Policy__c/fields/Limits_Endorsements__c.field-meta.xml
<CustomField>
    <fullName>Limits_Endorsements__c</fullName>
    <label>Limits Endorsements</label>
    <summaryFilterItems>
        <field>Endorsement__c.Category__c</field>
        <operation>equals</operation>
        <value>Decrease Limits, Increase Limits</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Endorsement__c.Stage__c</field>
        <operation>notEqual</operation>
        <value>Delivered to Insured, Closed Lost</value>
    </summaryFilterItems>
    <summaryForeignKey>Endorsement__c.Policy__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>