force-app/main/default/objects/Policy__c/fields/Lloyd_s_Class_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Lloyd_s_Class_of_Business__c</fullName>
    <description>Used in Scale Bordereaux report</description>
    <formula>IF( 

AND 
( 
RecordType.DeveloperName = &quot;Scale&quot;, 
OR(CONTAINS( Name , &quot;Directors &amp; Officers&quot;), CONTAINS( Name , &quot;D&amp;O&quot; )), 
NOT(
OR( CONTAINS(Name , &quot;Employment Practices Liability&quot;) , CONTAINS( Name, &quot;EPL&quot;),CONTAINS(Name, &quot;EPLI&quot;))
)
), 
&quot;Directors &amp; Officers&quot;, 
IF( 
AND 
( 
RecordType.DeveloperName = &quot;Scale&quot;, 
OR( CONTAINS (Name, &quot;Employment Practices Liability&quot;), CONTAINS(Name, &quot;EPL&quot;), CONTAINS(Name, &quot;EPLI&quot;) ), 
NOT( 
OR ( CONTAINS(Name, &quot;Directors &amp; Officers&quot;), CONTAINS(Name, &quot;D&amp;O&quot;) ) 
) 
), 
&quot;Employment Practices Liability Insurance&quot;, 
&quot;D&amp;O/EPLI&quot; 
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lloyd&apos;s Class of Business</label>
    <type>Text</type>
</CustomField>