force-app/main/default/objects/Policy__c/fields/Lloyd_s_Risk_Code__c.field-meta.xml
<CustomField>
    <fullName>Lloyd_s_Risk_Code__c</fullName>
    <description>Used in Scale Bordereaux report</description>
    <formula>IF( 

AND 
( 
RecordType.DeveloperName = &quot;Scale&quot;, 
OR(CONTAINS( Name , &quot;Directors &amp; Officers&quot;), CONTAINS( Name , &quot;D&amp;O&quot; )), 
NOT( 
OR( CONTAINS(Name , &quot;Employment Practices Liability&quot;) , CONTAINS( Name, &quot;EPL&quot;),CONTAINS(Name, &quot;EPLI&quot;)) 
) 
), 
&quot;D2&quot;,
IF( 
AND 
( 
RecordType.DeveloperName = &quot;Scale&quot;, 
OR( CONTAINS (Name, &quot;Employment Practices Liability&quot;), CONTAINS(Name, &quot;EPL&quot;), CONTAINS(Name, &quot;EPLI&quot;) ), 
NOT( 
OR ( CONTAINS(Name, &quot;Directors &amp; Officers&quot;), CONTAINS(Name, &quot;D&amp;O&quot;) ) 
) 
), 
&quot;D6&quot;, 
&quot;D2 &amp; D6&quot;
)
)</formula>
    <label>Lloyd&apos;s Risk Code</label>
    <type>Text</type>
</CustomField>