force-app/main/default/objects/Policy__c/fields/Lloyd_s_Section_Number__c.field-meta.xml
<CustomField>
    <fullName>Lloyd_s_Section_Number__c</fullName>
    <description>Used in Scale Bordereaux report</description>
    <formula>IF( 

AND 
( 
RecordType.DeveloperName = &quot;Scale&quot;, 
OR(CONTAINS( Name , &quot;Directors &amp; Officers&quot;), CONTAINS( Name , &quot;D&amp;O&quot; )), 
NOT( 
OR( CONTAINS(Name , &quot;Employment Practices Liability&quot;) , CONTAINS( Name, &quot;EPL&quot;),CONTAINS(Name, &quot;EPLI&quot;)) 
) 
),  
&quot;Section A&quot;, 
IF( 
AND 
( 
RecordType.DeveloperName = &quot;Scale&quot;, 
OR( CONTAINS (Name, &quot;Employment Practices Liability&quot;), CONTAINS(Name, &quot;EPL&quot;), CONTAINS(Name, &quot;EPLI&quot;) ), 
NOT( 
OR ( CONTAINS(Name, &quot;Directors &amp; Officers&quot;), CONTAINS(Name, &quot;D&amp;O&quot;) ) 
) 
), 
&quot;Section B&quot;, 
&quot;Sections A&amp;B&quot; 
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lloyd&apos;s Section Number</label>
    <type>Text</type>
</CustomField>