force-app/main/default/objects/Policy__c/fields/LLoyd_s_State_of_Risk__c.field-meta.xml
<CustomField>
    <fullName>LLoyd_s_State_of_Risk__c</fullName>
    <description>Used in Scale Bordereaux report</description>
    <formula>Mailing_State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LLoyd&apos;s State of Risk</label>
    <type>Text</type>
</CustomField>