force-app/main/default/objects/Policy__c/fields/Lloyd_s_Total_Premium__c.field-meta.xml
<CustomField>
    <fullName>Lloyd_s_Total_Premium__c</fullName>
    <description>Used in Scale Bordereaux report</description>
    <formula>Premium__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lloyd&apos;s Total Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>