force-app/main/default/objects/Policy__c/fields/Lloyd_s_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Lloyd_s_Transaction_Type__c</fullName>
    <defaultValue>&quot;Original Premium&quot;</defaultValue>
    <description>Used in Scale Bordereaux report</description>
    <label>Lloyd&apos;s Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Original Premium</fullName>
            </value>
            <value>
                <fullName>Endorsement Additional Premium</fullName>
            </value>
            <value>
                <fullName>Endorsement Return Premium</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>