force-app/main/default/objects/Policy__c/fields/Lloyds_Specific_Endorsements__c.field-meta.xml
<CustomField>
    <fullName>Lloyds_Specific_Endorsements__c</fullName>
    <label>Lloyds Specific Endorsements</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lloyds_Specific_Endorsements</valueSetName>
    </valueSet>
</CustomField>