force-app/main/default/objects/Policy__c/fields/Lloyds_Type_of_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Lloyds_Type_of_Insurance__c</fullName>
    <defaultValue>&quot;Direct&quot;</defaultValue>
    <description>Used in Scale Bordereaux report</description>
    <label>Lloyds Type of Insurance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>