force-app/main/default/objects/Policy__c/fields/Lloyds_US_Classification__c.field-meta.xml
<CustomField>
    <fullName>Lloyds_US_Classification__c</fullName>
    <defaultValue>&quot;US Surplus Lines&quot;</defaultValue>
    <description>Used in Scale Bordereaux report</description>
    <label>Lloyds US Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US Surplus Lines</fullName>
            </value>
            <value>
                <fullName>US Reinsurance</fullName>
            </value>
            <value>
                <fullName>Illinois Licensed</fullName>
            </value>
            <value>
                <fullName>Kentucky Licensed (US Virgin Islands)</fullName>
            </value>
            <value>
                <fullName>Non-Regulated</fullName>
            </value>
            <value>
                <fullName>Exempt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>