force-app/main/default/objects/Policy__c/fields/Location_City__c.field-meta.xml
<CustomField>
    <fullName>Location_City__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Location City</label>
    <type>TextArea</type>
</CustomField>