force-app/main/default/objects/Policy__c/fields/Location_Name__c.field-meta.xml
<CustomField>
    <fullName>Location_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Location Name</label>
    <type>TextArea</type>
</CustomField>