force-app/main/default/objects/Policy__c/fields/Location_State_Formula__c.field-meta.xml
<CustomField>
    <fullName>Location_State_Formula__c</fullName>
    <formula>Account__r.ShippingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location State</label>
    <type>Text</type>
</CustomField>