force-app/main/default/objects/Policy__c/fields/M_PL_Rated_Premium__c.field-meta.xml
<CustomField>
    <fullName>M_PL_Rated_Premium__c</fullName>
    <label>M&amp;PL Rated Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>