force-app/main/default/objects/Policy__c/fields/Mailing_Zip_Postal_Code_old__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Zip_Postal_Code_old__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mailing Zip/Postal Code old</label>
    <length>100</length>
    <type>Text</type>
</CustomField>