force-app/main/default/objects/Policy__c/fields/Marketer_UW__c.field-meta.xml
<CustomField>
    <fullName>Marketer_UW__c</fullName>
    <formula>Marketer_UW_Name__r.Account.Name</formula>
    <label>Marketer/UW</label>
    <type>Text</type>
</CustomField>