force-app/main/default/objects/Policy__c/fields/Marketer_UW_Contact_old__c.field-meta.xml
<CustomField>
    <fullName>Marketer_UW_Contact_old__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Marketer/UW Contact_old</label>
    <length>200</length>
    <type>Text</type>
</CustomField>