force-app/main/default/objects/Policy__c/fields/Marketer_UW_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Marketer_UW_Full_Name__c</fullName>
    <formula>Marketer_UW_Name__r.FirstName + &apos; &apos; + Marketer_UW_Name__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketer UW Full Name</label>
    <type>Text</type>
</CustomField>