force-app/main/default/objects/Policy__c/fields/Marketer_UW_ID__c.field-meta.xml
<CustomField>
    <fullName>Marketer_UW_ID__c</fullName>
    <formula>Marketer_UW_Name__r.AccountId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketer UW ID</label>
    <type>Text</type>
</CustomField>