force-app/main/default/objects/Policy__c/fields/Marketer_UW_old__c.field-meta.xml
<CustomField>
    <fullName>Marketer_UW_old__c</fullName>
    <label>Marketer/UW_old</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Amtrust</fullName>
            </value>
            <value>
                <fullName>AMWins</fullName>
            </value>
            <value>
                <fullName>Aon</fullName>
            </value>
            <value>
                <fullName>ARS</fullName>
            </value>
            <value>
                <fullName>CRC</fullName>
            </value>
            <value>
                <fullName>Evolve MGA</fullName>
            </value>
            <value>
                <fullName>Founder Shield</fullName>
            </value>
            <value>
                <fullName>GFI</fullName>
            </value>
            <value>
                <fullName>Gordon</fullName>
            </value>
            <value>
                <fullName>Hartan</fullName>
            </value>
            <value>
                <fullName>Insurance Noodle</fullName>
            </value>
            <value>
                <fullName>INSUREtrust</fullName>
            </value>
            <value>
                <fullName>LIDAC</fullName>
            </value>
            <value>
                <fullName>Lyons</fullName>
            </value>
            <value>
                <fullName>MMZ</fullName>
            </value>
            <value>
                <fullName>RT Specialty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>